# sme5qyx_DS5111su24_lab_01

./: NOTES.md  README.md  get_the_books.sh  makefile  pyproject.toml  requirements.txt  tokenizer_functions.py.save
.github/workflows/: validations.yml
Books/: get_the_books.sh  makefile
env/: pyvenv.cfg
src/pkg_sme5qyx/: __init__.py  tokenizer_functions.py
tests/: test_clean_text.py  test_count_words.py  test_integration.py  test_python_version.py  test_tokenize.py
